add 10 most recent posts

--- a/content/posts/yt-25.md
+++ b/content/posts/yt-25.md
@@ -3,13 +3,12 @@ title: yt 2.5 released!
 date: 2013-03-02T16:46:16-06:00
 lastmod: 2020-12-03T16:46:16-06:00
 author: John ZuHone
-# authorlink: https://author.site
-cover: /img/cover.jpg
+authorlink: https://hea-www.harvard.edu/~jzuhone/
+cover: /img/random/lego-fix.jpg
 categories:
   - development
 tags:
   - releases
-draft: true
 ---
 
 Announcing yt 2.5! 
@@ -18,10 +17,6 @@ Announcing yt 2.5!
 
 yt 2.5 released!
 ================
-
-.. author: John ZuHone <jzuhone@gmail.com>
-
-.. date: 1362200264
 
 We’re proud to announce the release of version 2.5 of the yt Project, http://yt-project.org/. The new version includes many new features, refinements of existing features, and numerous bugfixes.  We encourage all users to upgrade to take advantage of the changes.
 
