update posts with pictures, tags, author URLs

--- a/content/posts/yt-25.md
+++ b/content/posts/yt-25.md
@@ -6,9 +6,12 @@ author: John ZuHone
 authorlink: https://hea-www.harvard.edu/~jzuhone/
 cover: /img/random/lego-fix.jpg
 categories:
+  - archive
   - development
 tags:
+  - archive
   - releases
+  - yt 2.x
 ---
 
 Announcing yt 2.5! 
